--- a/src/app/common/toolbar/toolbar.component.scss
+++ b/src/app/common/toolbar/toolbar.component.scss
@@ -1,18 +1,15 @@
 .toolbar {
-  z-index: 1000;
+  z-index: 999;
   position: fixed;
   top: 0;
   bottom: 0;
   width: 51px;
-  background: #001529;
+  //background: #001529;
+  background: #fff;
+  box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
+  padding-top: 45px;
 
-  .logo {
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    background: url('/assets/logo.png') #fff no-repeat center;
-    background-size: 100%;
-  }
+
 
   ul {
     text-align: center;
