--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -6,14 +6,14 @@
       </ng-template>
       <nz-space [nzSplit]="spaceSplit">
         <app-projects *nzSpaceItem></app-projects>
-        <ng-container *nzSpaceItem>
-          <ng-container *ngTemplateOutlet="breadcrumb"></ng-container>
-        </ng-container>
+        <nz-breadcrumb *nzSpaceItem nzAutoGenerate>
+          <nz-breadcrumb-item>
+            <a [routerLink]="['/']"><span nz-icon nzType="home"></span> 首页</a>
+          </nz-breadcrumb-item>
+        </nz-breadcrumb>
       </nz-space>
     </nz-col>
-    <nz-col>
-      <ng-content></ng-content>
-    </nz-col>
+    <nz-col> </nz-col>
     <nz-col>
       <nz-space>
         <button *nzSpaceItem nz-button nzType="text">
