--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -4,11 +4,20 @@ nz-header {
   width: 100%;
   height: 45px;
   line-height: 45px;
-  padding: 0 16px 0 64px;
+  padding: 0 12px ;
   z-index: 999;
   box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
   background: #fff;
   transition: width 0.2s;
+
+  .logo {
+    height: 45px;
+    line-height: 45px;
+    width: 51px;
+    text-align: center;
+    background: url('/assets/logo.png') #fff no-repeat center;
+    background-size: 100%;
+  }
 }
 
 .center {
