--- a/src/app/namespace/overview/cloud/cloud.component.html
+++ b/src/app/namespace/overview/cloud/cloud.component.html
@@ -91,9 +91,7 @@
       <nz-list-item>
         <nz-list-item-meta>
           <nz-list-item-meta-title><b>消息队列</b></nz-list-item-meta-title>
-          <nz-list-item-meta-description>
-            使用腾讯云 TDMQ Plusar 作用事务补偿，默认采用 NATS JetStream 支持
-          </nz-list-item-meta-description>
+          <nz-list-item-meta-description> 使用腾讯云 TDMQ Plusar 作用事务补偿 </nz-list-item-meta-description>
         </nz-list-item-meta>
         <nz-list-item-extra>
           <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
@@ -104,9 +102,7 @@
       <nz-list-item>
         <nz-list-item-meta>
           <nz-list-item-meta-title><b>日志服务</b></nz-list-item-meta-title>
-          <nz-list-item-meta-description>
-            使用腾讯云 CLS 日志服务作用日志收集，默认采用 InfluxDB 支持
-          </nz-list-item-meta-description>
+          <nz-list-item-meta-description> 使用腾讯云 CLS 日志服务收集日志 </nz-list-item-meta-description>
         </nz-list-item-meta>
         <nz-list-item-extra>
           <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
