--- a/src/common/toolbar/toolbar.component.html
+++ b/src/common/toolbar/toolbar.component.html
@@ -49,7 +49,7 @@
       nz-menu-item
       nzMatchRouter
       [routerLink]="['/', v.namespace, 'developer']"
-      nz-tooltip="开发者"
+      nz-tooltip="开发"
       nzTooltipPlacement="right"
     >
       <i nz-icon nzType="code"></i>
