--- a/src/app/monitor/monitor.component.html
+++ b/src/app/monitor/monitor.component.html
@@ -10,10 +10,6 @@
     </ng-template>
     <app-header *ngIf="app.project as v" [breadcrumb]="breadcrumbTpl">
       <ul nz-menu nzMode="horizontal">
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'monitor', 'state']">
-          <span nz-icon nzType="alert"></span>
-          状态
-        </li>
         <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'monitor', 'sessions']">
           <span nz-icon nzType="rocket"></span>
           会话
@@ -22,10 +18,14 @@
           <span nz-icon nzType="file-protect"></span>
           审计
         </li>
+        <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'monitor', 'alert']">
+          <span nz-icon nzType="alert"></span>
+          告警
+        </li>
       </ul>
     </app-header>
     <nz-layout class="frame">
-      <nz-content>
+      <nz-content class="content">
         <router-outlet></router-outlet>
       </nz-content>
     </nz-layout>
