--- a/src/app/monitor/monitor.component.html
+++ b/src/app/monitor/monitor.component.html
@@ -1,14 +1,7 @@
 <nz-layout class="main">
   <app-toolbar></app-toolbar>
   <nz-layout>
-    <ng-template #breadcrumbTpl>
-      <nz-breadcrumb nzAutoGenerate>
-        <nz-breadcrumb-item>
-          <a [routerLink]="['/']"><span nz-icon nzType="home"></span> 首页</a>
-        </nz-breadcrumb-item>
-      </nz-breadcrumb>
-    </ng-template>
-    <app-header *ngIf="app.project as v" [breadcrumb]="breadcrumbTpl">
+    <app-header *ngIf="app.project as v">
       <ul nz-menu nzMode="horizontal">
         <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'monitor', 'values']">
           <span nz-icon nzType="control"></span>
