--- a/src/common/toolbar/toolbar.component.html
+++ b/src/common/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
       nz-tooltip="总览"
       nzTooltipPlacement="right"
     >
-      <span nz-icon nzType="desktop"></span>
+      <span nz-icon nzType="dashboard"></span>
     </li>
     <li
       nz-menu-item
