--- a/src/app/factory/pages/pages.component.html
+++ b/src/app/factory/pages/pages.component.html
@@ -1,29 +1,22 @@
-<nz-row [nzGutter]="8">
-  <nz-col>
-    <nz-input-group [nzPrefix]="suffixIconSearch" style="width: 180px">
-      <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
-      <ng-template #suffixIconSearch>
-        <i nz-icon nzType="search"></i>
-      </ng-template>
-    </nz-input-group>
-  </nz-col>
-  <nz-col>
-    <nz-button-group>
-      <!--          <button nz-button nzType="text" [nz-tooltip]="expand ? '收起' : '展开'" (click)="expanded()">-->
-      <!--            <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>-->
-      <!--          </button>-->
-      <!--          <button nz-button nzType="text" nz-tooltip="重组" (click)="openReorganization()">-->
-      <!--            <i nz-icon nzType="swap"></i>-->
-      <!--          </button>-->
-      <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
-        <i nz-icon nzType="ellipsis"></i>
-      </button>
-      <!--      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">-->
-      <!--        <i nz-icon nzType="reload"></i>-->
-      <!--      </button>-->
-    </nz-button-group>
-  </nz-col>
-</nz-row>
+<nz-space>
+  <nz-input-group *nzSpaceItem [nzPrefix]="suffixIconSearch" style="width: 180px">
+    <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
+    <ng-template #suffixIconSearch>
+      <span nz-icon nzType="search"></span>
+    </ng-template>
+  </nz-input-group>
+  <nz-button-group *nzSpaceItem>
+    <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+      <i nz-icon nzType="reload"></i>
+    </button>
+    <button nz-button nzType="text" [nz-tooltip]="expand ? '收起' : '展开'" (click)="expanded()">
+      <span nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></span>
+    </button>
+    <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
+      <span nz-icon nzType="sisternode"></span>
+    </button>
+  </nz-button-group>
+</nz-space>
 
 <nz-divider style="margin: 8px 0"></nz-divider>
 
@@ -32,6 +25,7 @@
   nzBlockNode
   nzExpandAll
   nzShowLine
+  nzDraggable
   [nzData]="nodes"
   [nzSearchValue]="searchText"
   [nzExpandedIcon]="nzExpandedIcon"
@@ -39,6 +33,7 @@
   [nzSelectedKeys]="selectedKeys"
   (nzClick)="selected($event)"
   (nzContextMenu)="actions($event, treeActions)"
+  (nzOnDrop)="reorganization($event)"
 >
   <ng-template #nzExpandedIcon let-node>
     <span class="custom-icon" *ngIf="factory.dict?.[node.key] as page">
