--- a/src/app/factory/pages/pages.component.scss
+++ b/src/app/factory/pages/pages.component.scss
@@ -1,19 +1,8 @@
 .custom-icon {
-  line-height: 24px;
-  font-size: 16px;
+  padding: 1px;
+  font-size: 14px;
 }
 
 .custom-node {
-  cursor: pointer;
-  line-height: 24px;
-  margin-left: 4px;
-  display: inline-block;
-
-  i {
-    margin-right: 2.5px;
-  }
-
-  span {
-    font-weight: bold;
-  }
+  padding: 2px;
 }
