UPDATE: Factory => Pages

--- a/src/common/toolbar/toolbar.component.html
+++ b/src/common/toolbar/toolbar.component.html
@@ -12,7 +12,7 @@
     <li
       nz-menu-item
       nzMatchRouter
-      [routerLink]="['/', v.namespace, 'factory']"
+      [routerLink]="['/', v.namespace, 'pages']"
       nz-tooltip="内容生成器"
       nzTooltipPlacement="right"
     >
